# rules_license_min

./: .gitignore  BUILD  CODEOWNERS  MODULE.bazel  README.md  bazel-bin  bazel-out  bazel-rules_license_min  bazel-testlogs
licenses/generic/: BUILD
licenses/spdx/: BUILD
rules/: BUILD  compliance.bzl  current_module_package_info.bzl  gather_licenses_info.bzl  gather_metadata.bzl  license.bzl  license_impl.bzl  license_kind.bzl  licenses_core.bzl  package_info.bzl  providers.bzl
rules/private/: gathering_providers.bzl
rules_gathering/: gather_metadata.bzl  generate_sbom.bzl
tools/: BUILD
